# kruft

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: actions.yml
benches/: CMakeLists.txt  bench.cpp
include/: krarg.h  krbit.h  krbltin.h  krbool.h  krconfig.h  krctype.h  krdef.h  krint.h  krlib.h  krlimits.h  krmath.h  krrand.h  krserial.h  krstr.h
tests/: CMakeLists.txt  Makefile  borland.mak  defs.c  nmake.mak  t_bit.inl  t_bltin.inl  t_ctype.inl  t_int.inl  t_lib.inl  t_limits.inl  t_math.inl  t_rand.inl  t_serial.inl  t_str.inl  test.c  test_c.c  test_cpp.cpp  test_ctype.c  test_ctype.cpp  test_cxx.cpp  test_lib.c  test_lib.cpp  test_str.c  test_str.cpp  testc.c  zztest.c  zztest.cpp  zztest.h
tests/zztest/: CMakeLists.txt  zzcheck.inl
